--- a/website/index.html
+++ b/website/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/inputContainer.css">
     <link rel="stylesheet" href="css/entryContainer.css">
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
   </head>
   <body>
     <header>
